refactor after merging from main